<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalapp.RecentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainMenuButton"
                style="@style/SystemButtons"
                android:text="@string/main_menu" />

            <Button
                android:id="@+id/artistsButton"
                style="@style/SystemButtons"
                android:text="@string/artists" />
        </LinearLayout>

        <TextView
            style="@style/DescriptionTextView"
            android:text="@string/recents_description"
            android:textColor="@color/artistsCategoryColor" />

        <android.support.v7.widget.CardView style="@style/RecentsCards">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/actual_song" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/play" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/RecentsCards">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/actual_song" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/play" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
