<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalapp.BuyMusicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainMenuButton"
                style="@style/SystemButtons"
                android:text="@string/main_menu" />

            <Button
                android:id="@+id/artistsButton"
                style="@style/SystemButtons"
                android:text="@string/artist" />
        </LinearLayout>

        <TextView
            style="@style/DescriptionTextView"
            android:text="@string/buy_music_description"
            android:textColor="@color/recentCategoryColor" />

        <android.support.v7.widget.CardView
            style="@style/BuyMusicCards"
            android:backgroundTint="@android:color/white">

            <EditText
                android:id="@+id/searchEditable"
                style="@style/DescriptionTextView"
                android:hint="@string/buy_music__edittext_hint"
                android:textColorHint="@color/artistsCategoryColor" />

        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/searchmusic" />

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                android:id="@+id/wantedArtist"
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/visa" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/mastercard" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/americanexpress" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/maestro" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/paypal" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
