<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalapp.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/artistsCard"
                style="@style/Card"
                android:backgroundTint="@color/artistsCategoryColor"
                app:cardUseCompatPadding="true">

                <LinearLayout style="@style/CategoryInsideLayoutStyle">

                    <TextView
                        style="@style/CategoryTextView"
                        android:text="@string/artists" />

                    <ImageView
                        style="@style/CategoryImageView"
                        android:background="@drawable/piano" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/playlistsCard"
                style="@style/Card"
                android:backgroundTint="@color/playlistsCategoryColor"
                app:cardUseCompatPadding="true">

                <LinearLayout style="@style/CategoryInsideLayoutStyle">

                    <TextView
                        style="@style/CategoryTextView"
                        android:text="@string/playlists" />

                    <ImageView
                        style="@style/CategoryImageView"
                        android:background="@drawable/playlists" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout style="@style/CategoryLayoutStyle">

            <android.support.v7.widget.CardView
                android:id="@+id/recentCard"
                style="@style/Card"
                android:backgroundTint="@color/recentCategoryColor"
                app:cardUseCompatPadding="true">

                <LinearLayout style="@style/CategoryInsideLayoutStyle">

                    <TextView
                        style="@style/CategoryTextView"
                        android:text="@string/recents" />

                    <ImageView
                        style="@style/CategoryImageView"
                        android:background="@drawable/compactdisc" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/buyMusicCard"
                style="@style/Card"
                android:backgroundTint="@color/buyMusicCategoryColor"
                app:cardUseCompatPadding="true">

                <LinearLayout style="@style/CategoryInsideLayoutStyle">

                    <TextView
                        style="@style/CategoryTextView"
                        android:text="@string/buy_music" />

                    <ImageView
                        android:id="@+id/imageView"
                        style="@style/CategoryImageView"
                        android:background="@drawable/shoppingbag" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/now_playing"
            android:textSize="@dimen/now_playing_height" />

        <android.support.v7.widget.CardView
            android:id="@+id/nowplayingCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/actual_song"
                    android:textSize="@dimen/current_item_height" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stop" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pause" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
</ScrollView>

