<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalapp.ArtistsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainMenuButton"
                style="@style/SystemButtons"
                android:text="@string/main_menu" />

            <Button
                android:id="@+id/buyMusicButton"
                style="@style/SystemButtons"
                android:text="@string/buy_music" />
        </LinearLayout>

        <TextView
            style="@style/DescriptionTextView"
            android:text="@string/choose_artist"
            android:textColor="@color/playlistsCategoryColor" />

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/ArtistsCard">

            <TextView
                style="@style/DescriptionTextView"
                android:text="@string/artist" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
