<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellowcompactdisc"
    tools:context="com.example.android.musicalapp.NowPlayingActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mainMenuButton"
            style="@style/SystemButtons"
            android:text="@string/main_menu" />

        <Button
            android:id="@+id/artistsButton"
            style="@style/SystemButtons"
            android:text="@string/artist" />
    </LinearLayout>

    <TextView
        style="@style/DescriptionTextView"
        android:text="@string/now_playing_description"
        android:layout_below="@+id/buttonLayout" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/rewind" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/previoustrack"
                android:scaleX="0.7"
                android:scaleY="0.7" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/stopbutton"
                android:scaleX="0.7"
                android:scaleY="0.7" />

            <ImageButton
                android:id="@+id/playButton"
                style="@style/MusicButtonsImageView"
                android:layout_weight="2"
                android:background="@drawable/playbutton" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/pause" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/nexttrack"
                android:scaleX="0.7"
                android:scaleY="0.7" />

            <ImageButton
                style="@style/MusicButtonsImageView"
                android:background="@drawable/forward" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
